# stratcom-vjoy-feeder

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindQt5BaseDir.cmake
gfx/: Resource.rc  resource.h
src/: Barrier.hpp  Config.cpp  Config.hpp  EventProcessor.cpp  EventProcessor.hpp  HidRepDesc.hpp  IconProvider.cpp  IconProvider.hpp  Install.cpp  Install.hpp  Log.cpp  Log.hpp  TrayIcon.cpp  TrayIcon.hpp  main.cpp
